Enhance project structure and documentation: - Update .gitignore files for backend, frontend, and simulator. - Add example .env files for backend, redis consumer, and simulator. - Create README files for backend, redis consumer, and simulator with setup instructions. - Refine project descriptions and dependencies in README files.

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,16 @@ ENV/
 env/
 .venv/
 
+# Python cache files
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+
 # .env files
 .env
 .env.*
+!.env.example
 
 # IDEs and OS
 .vscode/
