--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,26 +6,41 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "cypress": "cypress open"
   },
   "dependencies": {
-    "chart.js": "^4.4.8",
-    "next": "15.2.5",
+    "chart.js": "^4.4.9",
+    "express": "^5.1.0",
+    "next": "^15.3.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
+    "@cypress/react": "^9.0.1",
+    "@cypress/webpack-dev-server": "^4.0.2",
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@tailwindcss/postcss": "^4.1.4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
     "@types/react-dom": "^19",
-    "@types/socket.io-client": "^1.4.36",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.5",
-    "tailwindcss": "^4",
+    "cypress": "^14.3.1",
+    "eslint": "^9.25.0",
+    "eslint-config-next": "^15.3.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "jest-localstorage-mock": "^2.4.26",
+    "tailwindcss": "^4.1.4",
+    "ts-jest": "^29.3.2",
     "typescript": "^5"
   }
 }
