Dockerised project to be cloud-ready. Changes to codebase: -Backend: --use env vars in settings py --added entrypoint to wait for postgres -Frontend: --Solved typescript/eslint across codebase --corrected api timezone change -Redis_consumer: --mod code to wait for backend -Simulator --added supervisor.conf for running main and mqtt_to_redis simultaneously in container --mqtt_client to retry and log -Misc: --mosquitto.conf for mqtt service

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,7 @@ DB_HOST=localhost
 DB_PORT=5432
 REDIS_HOST=localhost
 REDIS_PORT=6379
+DJANGO_SECRET_KEY='42lhl(^(yd9bwfo#x%p&)42cy#cd$+8(=*i_erg+1126rd=cli'
+FRONTEND_URL=http://localhost:3000
+DB_HOST=http://localhost:5432
+API_BASE_URL=http://localhost:8000
