--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,20 +11,23 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
+    "autoprefixer": "^10.4.19",
     "chart.js": "^4.4.9",
     "express": "^5.1.0",
     "next": "^15.3.1",
+    "postcss": "^8.4.38",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@cypress/react": "^9.0.1",
     "@cypress/webpack-dev-server": "^4.0.2",
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -39,7 +42,6 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "jest-localstorage-mock": "^2.4.26",
-    "tailwindcss": "^4.1.4",
     "ts-jest": "^29.3.2",
     "typescript": "^5"
   }
